--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 #pysqlite3-binary
-sqlite3==3.35.0
 urllib3==1.26.16
 streamlit== 1.28.1
-chromadb
+chromadb==0.3.29
 text_generation
 langchain
 tokenizers
